objects/CSE_Contact_Roles__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CSE Contact Roles</relationshipLabel>
        <relationshipName>CSE_Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Customer_Success_Engagement__c</fullName>
        <label>Customer Success Engagement</label>
        <referenceTo>Customer_Success_Engagement__c</referenceTo>
        <relationshipLabel>CSE Contact Roles</relationshipLabel>
        <relationshipName>CSE_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Department__c</fullName>
        <formula>Contact__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will indicate which is the primary contact</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Role__c</fullName>
        <description>Contact's role in the customer success engagement</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Course Coordinator</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>Department Chair</fullName>
                </value>
                <value>
                    <fullName>Dept Head</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Faculty Advisor</fullName>
                </value>
                <value>
                    <fullName>Faculty Development</fullName>
                </value>
                <value>
                    <fullName>Identity Management</fullName>
                </value>
                <value>
                    <fullName>Identity Management / IT</fullName>
                </value>
                <value>
                    <fullName>Internal - AE</fullName>
                </value>
                <value>
                    <fullName>Internal - ASG</fullName>
                </value>
                <value>
                    <fullName>Internal - CSE</fullName>
                </value>
                <value>
                    <fullName>Internal - CSS</fullName>
                </value>
                <value>
                    <fullName>Internal - Pricing &amp; Licensing Analyst</fullName>
                </value>
                <value>
                    <fullName>Internal - Sales</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Key Influencer</fullName>
                </value>
                <value>
                    <fullName>Lab Coordinator</fullName>
                </value>
                <value>
                    <fullName>License Admin</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Principal Investigator</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Provost</fullName>
                </value>
                <value>
                    <fullName>Researcher</fullName>
                </value>
                <value>
                    <fullName>SFT Contact</fullName>
                </value>
                <value>
                    <fullName>Student/Graduate Student</fullName>
                </value>
                <value>
                    <fullName>Student Ambassador</fullName>
                </value>
                <value>
                    <fullName>Student Leader</fullName>
                </value>
                <value>
                    <fullName>Teaching Assistant</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Title__c</fullName>
        <description>Contact's title</description>
        <formula>Contact__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Unique_CSE_Contact_Role_Association__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field will store the customer success engagement id and contact id to determine uniqueness and prevent duplicates</description>
        <label>Unique CSE Contact Role Association</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>CSE Contact Role</label><nameField>
        <displayFormat>ECR-{000000}</displayFormat>
        <label>CSE Contact Roles Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>CSE Contact Roles</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>